--- a/files/providers/wls_deployment/create.py.erb
+++ b/files/providers/wls_deployment/create.py.erb
@@ -12,6 +12,7 @@ versionidentifier = '<%= versionidentifier %>'
 remote            = '<%= remote %>'
 upload            = '<%= upload %>'
 stagingmode       = '<%= stagingmode %>'
+prepare           = '<%= prepare %>'
 
 edit()
 startEdit()
@@ -33,31 +34,36 @@ try:
     else:
         uploadflag = 'false'
 
-    print 'deploying....'
-    if versionidentifier:
-        if planpath:
-            print 'deploying with version and deploymentplan....'
-            if stagingmode:
-                deploy(appName=name, path=localpath, planPath=planpath, targets=target, stageMode=stagingmode, remote=remoteflag, upload=uploadflag, libraryModule=library, versionIdentifier=versionidentifier)
-            else:
-                deploy(appName=name, path=localpath, planPath=planpath, targets=target, remote=remoteflag, upload=uploadflag, libraryModule=library, versionIdentifier=versionidentifier)
-        else:
-            print 'deploying with version without deploymentplan....'
-            if stagingmode:
-                deploy(appName=name, path=localpath, targets=target, remote=remoteflag, stageMode=stagingmode, upload=uploadflag, libraryModule=library, versionIdentifier=versionidentifier)
-            else:
-                deploy(appName=name, path=localpath, targets=target, remote=remoteflag, upload=uploadflag, libraryModule=library, versionIdentifier=versionidentifier)
+
+    if prepare == 'true':
+    print 'preparing....'
+        distributeApplication(localpath)
     else:
-        if planpath:
-            if stagingmode:
-                deploy(appName=name, path=localpath, planPath=planpath, targets=target, remote=remoteflag, stageMode=stagingmode, upload=uploadflag, libraryModule=library)
+        print 'deploying....'
+        if versionidentifier:
+            if planpath:
+                print 'deploying with version and deploymentplan....'
+                if stagingmode:
+                    deploy(appName=name, path=localpath, planPath=planpath, targets=target, stageMode=stagingmode, remote=remoteflag, upload=uploadflag, libraryModule=library, versionIdentifier=versionidentifier)
+                else:
+                    deploy(appName=name, path=localpath, planPath=planpath, targets=target, remote=remoteflag, upload=uploadflag, libraryModule=library, versionIdentifier=versionidentifier)
             else:
-                deploy(appName=name, path=localpath, planPath=planpath, targets=target, remote=remoteflag, upload=uploadflag, libraryModule=library)
+                print 'deploying with version without deploymentplan....'
+                if stagingmode:
+                    deploy(appName=name, path=localpath, targets=target, remote=remoteflag, stageMode=stagingmode, upload=uploadflag, libraryModule=library, versionIdentifier=versionidentifier)
+                else:
+                    deploy(appName=name, path=localpath, targets=target, remote=remoteflag, upload=uploadflag, libraryModule=library, versionIdentifier=versionidentifier)
         else:
-            if stagingmode:
-                deploy(appName=name, path=localpath, targets=target, remote=remoteflag, stageMode=stagingmode, upload=uploadflag, libraryModule=library)
+            if planpath:
+                if stagingmode:
+                    deploy(appName=name, path=localpath, planPath=planpath, targets=target, remote=remoteflag, stageMode=stagingmode, upload=uploadflag, libraryModule=library)
+                else:
+                    deploy(appName=name, path=localpath, planPath=planpath, targets=target, remote=remoteflag, upload=uploadflag, libraryModule=library)
             else:
-                deploy(appName=name, path=localpath, targets=target, remote=remoteflag, upload=uploadflag, libraryModule=library)
+                if stagingmode:
+                    deploy(appName=name, path=localpath, targets=target, remote=remoteflag, stageMode=stagingmode, upload=uploadflag, libraryModule=library)
+                else:
+                    deploy(appName=name, path=localpath, targets=target, remote=remoteflag, upload=uploadflag, libraryModule=library)
 
     save()
     activate()
