fix syntax error

--- a/files/providers/wls_deployment/create.py.erb
+++ b/files/providers/wls_deployment/create.py.erb
@@ -35,7 +35,7 @@ try:
         uploadflag = 'false'
 
 
-    if prepare == 'true':
+    if prepare == '1':
     print 'preparing....'
         distributeApplication(localpath)
     else:
