--- a/files/providers/wls_deployment/create.py.erb
+++ b/files/providers/wls_deployment/create.py.erb
@@ -37,7 +37,7 @@ try:
 
     if prepare == '1':
         print 'preparing....'
-        distributeApplication(localpath)
+        distributeApplication(localpath, targets=target)
     else:
         print 'deploying....'
         if versionidentifier:
